--- a/23_19127395/Final Project.ipynb
+++ b/23_19127395/Final Project.ipynb
@@ -42,7 +42,7 @@
     "your data?**\n",
     "- Data is about top 1000 movies and TV shows according to IMDb rating\n",
     "- Source can be found [here](https://www.kaggle.com/datasets/anujsingh098/top-1000-imdb-movies?resource=download)\n",
-    "- Description about data has 1 files, 16 columns. But i only use a partial.\n",
+    "- Description about data has 1 files, 16 columns.\n",
     "\n",
     "• **Do authors of this data allow you to use like this? You\n",
     "can check the data license**\n",
@@ -51,7 +51,7 @@
     "\n",
     "• **How did authors collect data?**\n",
     "- Data is obtained by 2 authors.\n",
-    "- They collect data from https://media-amazon.com/ by using SeriesTitle = Name of the movie"
+    "- They collect data from https://media-amazon.com/ by using SeriesTitle"
    ]
   },
   {
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7853d60f",
+   "id": "47bcfe7a",
    "metadata": {},
    "source": [
     "## 3. Asking meaningful questions\n",
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8976ab45",
+   "id": "eff3b7de",
    "metadata": {},
    "source": [
     "## 4. Preprocessing + analyzing data to answer each question\n",
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7bd5e19",
+   "id": "f228596d",
    "metadata": {},
    "source": [
     "**Q1: Which genres give out most total gross and least in total?**\n",
@@ -712,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e22127ee",
+   "id": "ef7b5a90",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ee8999a4",
+   "id": "25937328",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdba6fcb",
+   "id": "59f17ca3",
    "metadata": {},
    "source": [
     "These are the largest and lowest gross of the movie which sorted by genres. But the question asked to find genres, so ill find the ratio of the total gross of each film genre, then choose 3 genres filmmakers should focus in."
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0c388253",
+   "id": "662c1600",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d8f73d48",
+   "id": "7403e6d2",
    "metadata": {
     "scrolled": true
    },
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29057b3a",
+   "id": "df95e8d6",
    "metadata": {},
    "source": [
     "**Assessing:**\n",
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6361677",
+   "id": "c1d00989",
    "metadata": {},
    "source": [
     "**Q2: How favorite customer genres trend differ over time?**\n",
